@@ -14,6 +14,7 @@ unburden-home-dir (0.3.2.5) UNRELEASED; urgency=medium
     + emptying files and directories
     + option -f
     + creating non-existent files
+    + handling items that are neither file nor directory nor symlink
   * Updated build dependencies: Require at least version 1.30 of
     libtest-file-perl for dir_exists_ok.
 
